# ruby-polars

./: .gitignore  .yardopts  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  polars-df.gemspec
.github/workflows/: build.yml  release.yml
ext/polars/: Cargo.toml  extconf.rb
ext/polars/src/: allocator.rs  batched_csv.rs  conversion.rs  dataframe.rs  error.rs  exceptions.rs  expr.rs  file.rs  lazyframe.rs  lazygroupby.rs  lib.rs  list_construction.rs  numo.rs  object.rs  on_startup.rs  plan_callback.rs  prelude.rs  rb_modules.rs  series.rs  sql.rs  timeout.rs  utils.rs
ext/polars/src/apply/: dataframe.rs  lazy.rs  mod.rs  series.rs
ext/polars/src/c_api/: allocator.rs  mod.rs
ext/polars/src/catalog/: unity.rs
ext/polars/src/conversion/: any_value.rs  anyvalue.rs  categorical.rs  chunked_array.rs  datetime.rs  mod.rs
ext/polars/src/dataframe/: construction.rs  export.rs  general.rs  io.rs  map.rs  mod.rs  serde.rs
ext/polars/src/expr/: array.rs  binary.rs  bitwise.rs  categorical.rs  datatype.rs  datetime.rs  extension.rs  general.rs  list.rs  meta.rs  mod.rs  name.rs  rolling.rs  selector.rs  serde.rs  string.rs  struct.rs
ext/polars/src/functions/: aggregation.rs  business.rs  eager.rs  io.rs  lazy.rs  meta.rs  misc.rs  mod.rs  random.rs  range.rs  string_cache.rs  strings.rs  utils.rs  whenthen.rs
ext/polars/src/interop/: mod.rs
ext/polars/src/interop/arrow/: mod.rs  to_rb.rs  to_ruby.rs  to_rust.rs
ext/polars/src/interop/numo/: mod.rs  numo_rb.rs  numo_rs.rs  to_numo_df.rs  to_numo_series.rs
ext/polars/src/io/: cloud_options.rs  mod.rs  scan_options.rs  sink_options.rs  sink_output.rs
ext/polars/src/lazy/: apply.rs  dataframe.rs  dsl.rs  meta.rs  mod.rs  utils.rs
ext/polars/src/lazyframe/: exitable.rs  general.rs  mod.rs  optflags.rs  serde.rs  sink.rs
ext/polars/src/map/: dataframe.rs  lazy.rs  mod.rs  ruby_udf.rs  series.rs
ext/polars/src/ruby/: background_thread.rs  capsule.rs  exceptions.rs  gvl.rs  lazy.rs  mod.rs  numo.rs  numo_rs.rs  plan_callback.rs  rb_modules.rs  ruby_convert_registry.rs  ruby_function.rs  ruby_udf.rs  thread.rs  utils.rs
ext/polars/src/series/: aggregation.rs  arithmetic.rs  comparison.rs  construction.rs  export.rs  general.rs  import.rs  map.rs  mod.rs  scatter.rs  set_at_idx.rs
ext/polars/src/testing/: frame.rs  series.rs
lib/: polars-df.rb  polars.rb
lib/polars/: array_expr.rb  array_name_space.rb  batched_csv_reader.rb  binary_expr.rb  binary_name_space.rb  cat_expr.rb  cat_name_space.rb  catalog.rb  collect_batches.rb  config.rb  convert.rb  data_frame.rb  data_frame_plot.rb  data_type_expr.rb  data_type_group.rb  data_types.rb  date_time_expr.rb  date_time_name_space.rb  dynamic_group_by.rb  exceptions.rb  expr.rb  expr_dispatch.rb  extension_expr.rb  extension_name_space.rb  functions.rb  group_by.rb  iceberg_dataset.rb  in_process_query.rb  io.rb  lazy_frame.rb  lazy_functions.rb  lazy_group_by.rb  list_expr.rb  list_name_space.rb  meta_expr.rb  name_expr.rb  plot.rb  query_opt_flags.rb  rolling_group_by.rb  scan_cast_options.rb  (+18 more)
lib/polars/catalog/: api_client.rb  client.rb  error.rb  models.rb  unity.rb
lib/polars/catalog/unity/: catalog_info.rb  column_info.rb  namespace_info.rb  table_info.rb
lib/polars/functions/: as_datatype.rb  business.rb  col.rb  datatype.rb  eager.rb  escape_regex.rb  lazy.rb  len.rb  lit.rb  random.rb  repeat.rb  whenthen.rb
lib/polars/functions/aggregation/: horizontal.rb  vertical.rb
lib/polars/functions/range/: date_range.rb  datetime_range.rb  int_range.rb  linear_space.rb  time_range.rb
lib/polars/io/: avro.rb  cloud.rb  csv.rb  database.rb  delta.rb  iceberg.rb  ipc.rb  json.rb  lines.rb  ndjson.rb  parquet.rb  scan_options.rb  sink_options.rb  utils.rb
lib/polars/utils/: constants.rb  convert.rb  deprecation.rb  parse.rb  reduce_balanced.rb  serde.rb  unstable.rb  various.rb  wrap.rb
lib/polars/utils/construction/: data_frame.rb  series.rb  utils.rb
test/: active_record_test.rb  array_expr_test.rb  arrow_test.rb  avro_test.rb  cat_expr_test.rb  catalog_test.rb  config_test.rb  csv_test.rb  data_frame_test.rb  data_types_test.rb  database_test.rb  date_time_expr_test.rb  delta_test.rb  doc_test.rb  docs_test.rb  expr_test.rb  functions_test.rb  guide_test.rb  iceberg_test.rb  ipc_test.rb  json_test.rb  lazy_frame_test.rb  list_expr_test.rb  list_name_space_test.rb  marshal_test.rb  meta_expr_test.rb  numo_test.rb  parquet_test.rb  plot_test.rb  selectors_test.rb  series_test.rb  sql_test.rb  string_cache_test.rb  string_expr_test.rb  string_name_space_test.rb  struct_expr_test.rb  test_helper.rb  testing_test.rb  types_test.rb  unity_test.rb
test/support/: active_record.rb  data.arrow  data.avro  data.csv  data.json  data.ndjson  data.parquet  data2.csv  iris.csv  rows.json  types.parquet
test/support/delta/: part-00001-745349ff-6804-4cce-9a5e-514ca980d549-c000.snappy.parquet  part-00001-eeffaeba-16eb-4d8b-bb8f-654bfb8e823d-c000.snappy.parquet
