[workspace]
members = ["ext/polars"]

[patch.crates-io]
jsonpath_lib = { git = "https://github.com/ritchie46/jsonpath", rev = "24eaf0b4416edff38a4d1b6b17bc4b9f3f047b4b" }
polars = { version = "0.30.0", git = "https://github.com/pola-rs/polars", rev = "2173efc1c52d42429975c0106587366a5362de0b" }
polars-core = { version = "0.30.0", git = "https://github.com/pola-rs/polars", rev = "2173efc1c52d42429975c0106587366a5362de0b" }

[profile.release]
strip = true
