[package]
name = "polars"
version = "0.11.0"
license = "MIT"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.76.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8"
chrono = "0.4"
either = "1.8"
magnus = "0.6"
polars-core = "=0.41.0"
polars-parquet = "=0.41.0"
polars-utils = "=0.41.0"
serde_json = "1"
smartstring = "1"

[dependencies.polars]
version = "=0.41.0"
features = [
    "abs",
    "approx_unique",
    "arg_where",
    "array_any_all",
    "array_count",
    "asof_join",
    "avro",
    "binary_encoding",
    "concat_str",
    "cov",
    "cross_join",
    "cse",
    "csv",
    "cum_agg",
    "cumulative_eval",
    "cutqcut",
    "dataframe_arithmetic",
    "diagonal_concat",
    "diff",
    "dot_product",
    "dtype-full",
    "dynamic_group_by",
    "ewma",
    "ewma_by",
    "extract_groups",
    "extract_jsonpath",
    "find_many",
    "fmt",
    "interpolate",
    "ipc",
    "ipc_streaming",
    "is_first_distinct",
    "is_in",
    "is_last_distinct",
    "is_unique",
    "json",
    "lazy",
    "list_any_all",
    "list_count",
    "list_drop_nulls",
    "list_eval",
    "list_gather",
    "list_sample",
    "list_to_struct",
    "log",
    "merge_sorted",
    "meta",
    "mode",
    "moment",
    "month_start",
    "month_end",
    "offset_by",
    "object",
    "parquet",
    "partition_by",
    "pct_change",
    "peaks",
    "performant",
    "pivot",
    "product",
    "propagate_nans",
    "random",
    "rank",
    "range",
    "regex",
    "reinterpret",
    "repeat_by",
    "replace",
    "rle",
    "rolling_window",
    "rolling_window_by",
    "round_series",
    "row_hash",
    "search_sorted",
    "semi_anti_join",
    "serde-lazy",
    "sign",
    "sql",
    "string_encoding",
    "string_pad",
    "string_to_integer",
    "strings",
    "timezones",
    "to_dummies",
    "top_k",
    "trigonometry",
    "unique_counts",
]

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
