[package]
name = "polars-ruby"
version = "0.23.0"
license = "MIT"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2024"
rust-version = "1.89.0"
publish = false

[lib]
name = "polars"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8"
arrow = { package = "polars-arrow", version = "=0.52.0" }
bytes = "1"
chrono = "0.4"
either = "1.8"
magnus = { version = "0.8", features = ["chrono"] }
num-traits = "0.2"
parking_lot = "0.12"
polars-compute = "=0.52.0"
polars-core = "=0.52.0"
polars-dtype = "=0.52.0"
polars-error = "=0.52.0"
polars-io = "=0.52.0"
polars-lazy = { version = "=0.52.0", features = ["catalog"] }
polars-ops = "=0.52.0"
polars-plan = "=0.52.0"
polars-parquet = "=0.52.0"
polars-testing = "=0.52.0"
polars-utils = "=0.52.0"
rayon = "1.9"
rb-sys = "0.9"
regex = "1"
serde_json = "1"

[dependencies.polars]
version = "=0.52.0"
features = [
    "abs",
    "approx_unique",
    "arg_where",
    "array_any_all",
    "array_count",
    "array_to_struct",
    "asof_join",
    "avro",
    "aws",
    "azure",
    "binary_encoding",
    "bitwise",
    "business",
    "cloud",
    "concat_str",
    "cov",
    "cross_join",
    "cse",
    "csv",
    "cum_agg",
    "cumulative_eval",
    "cutqcut",
    "dataframe_arithmetic",
    "diagonal_concat",
    "diff",
    "dot_diagram",
    "dot_product",
    "dtype-full",
    "dynamic_group_by",
    "ewma",
    "ewma_by",
    "extract_groups",
    "extract_jsonpath",
    "find_many",
    "fmt",
    "gcp",
    "hist",
    "http",
    "iejoin",
    "index_of",
    "interpolate",
    "interpolate_by",
    "ipc",
    "ipc_streaming",
    "is_between",
    "is_close",
    "is_first_distinct",
    "is_in",
    "is_last_distinct",
    "is_unique",
    "json",
    "lazy",
    "list_any_all",
    "list_count",
    "list_drop_nulls",
    "list_eval",
    "list_gather",
    "list_sample",
    "list_sets",
    "list_to_struct",
    "log",
    "merge_sorted",
    "meta",
    "mode",
    "moment",
    "month_start",
    "month_end",
    "offset_by",
    "object",
    "parquet",
    "partition_by",
    "pct_change",
    "peaks",
    "performant",
    "pivot",
    "product",
    "propagate_nans",
    "random",
    "rank",
    "range",
    "regex",
    "reinterpret",
    "repeat_by",
    "replace",
    "rle",
    "rolling_window",
    "rolling_window_by",
    "round_series",
    "row_hash",
    "search_sorted",
    "semi_anti_join",
    "serde-lazy",
    "sign",
    "sql",
    "string_encoding",
    "string_pad",
    "string_to_integer",
    "strings",
    "timezones",
    "to_dummies",
    "top_k",
    "trigonometry",
    "unique_counts",
]

[target.'cfg(not(target_family = "unix"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
libmimalloc-sys = "=0.1.38"

# Feature background_threads is unsupported on MacOS (https://github.com/jemalloc/jemalloc/issues/843).
[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
tikv-jemallocator = { version = "0.5", features = ["disable_initial_exec_tls", "background_threads"] }

[target.'cfg(all(target_family = "unix", target_os = "macos"))'.dependencies]
tikv-jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[features]
default = []
serialize_binary = []
